upload new version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\hans\\AppData\\Roaming\\SPB_Data\\.virtualenvs\\NCSIST-CAM-eugOhOdz\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\hans\\.virtualenvs\\NCSIST-CAM-eugOhOdz\\Scripts\\python.exe",
     "python.formatting.provider": "autopep8"
 }
