--- a/Pipfile
+++ b/Pipfile
@@ -9,9 +9,9 @@ autopep8 = "*"
 rope = "*"
 
 [packages]
-numpy = "*"
+numpy = "<1.19"
 matplotlib = "*"
 pyqt5 = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.7"
